compiler/testData/diagnostics/tests/multiplatform/topLevelFun/headerDeclarationWithBody.fir.kt
// MODULE: m1-common
// FILE: common.kt

<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{METADATA}!>expect fun foo()<!>

<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{METADATA}, EXPECTED_DECLARATION_WITH_BODY!>expect fun foo()<!> {}

<!EXPECTED_DECLARATION_WITH_BODY!>expect fun bar()<!> {}
